--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: flutter_mp3_finder
 description: A new Flutter plugin for listing all mp3 informations located in phone storage in mobile.
 version: 0.1.0
-author: ali tazik , ali.tazik@gmail.com
-homepage:
+author: ali tazik <ali.tazik@gmail.com>
+homepage: https://github.com/tazik561/FlutterMp3FinderPlugin
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
